# mos-renode

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.en.md  README.md  README_zh.md  build.sh  mos-renode.code-workspace
.eide/: eide.json  eide.yml  env.ini  files.options.yml
app/: main.cpp  main.h  test.hpp
emulation/: debug_config.resc  multi_mach.resc  run.sh
mos/: config.h  shell.hpp
mos/arch/: cortex_m4.hpp
mos/kernel/: alloc.hpp  global.hpp  ipc.hpp  scheduler.hpp  sync.hpp  task.hpp  utils.hpp
mos/kernel/data_type/: buffer.hpp  list.hpp
simulation/: add-on.repl  debug_config.resc  multi_mach.resc  renode-config.resc
